--- a/assets/stylesheets/main.scss.erb
+++ b/assets/stylesheets/main.scss.erb
@@ -181,3 +181,43 @@ p a{
 	cursor: pointer;
 	font-weight: 600;
 }
+
+/*=======================================
+Images
+=========================================*/
+
+
+.fb_icon:before {
+  content: url(<%= image_path 'fb_icon.png' %>);
+  position: relative;
+  top: 3px;
+  left: 3px;
+}
+
+.tw_icon:after {
+  content: url(<%= image_path 'tw_icon.png' %>);
+  position: relative;
+  top: 3px;
+  left: 3px;
+}
+
+.yt_icon:after {
+  content: url(<%= image_path 'yt_icon.png' %>);
+  position: relative;
+  top: 3px;
+  left: 3px;
+}
+
+.pt_icon:after {
+  content: url(<%= image_path 'pt_icon.png' %>);
+  position: relative;
+  top: 3px;
+  left: 3px;
+}
+
+.ig_icon:after {
+  content: url(<%= image_path 'ig_icon.png' %>);
+  position: relative;
+  top: 3px;
+  left: 3px;
+}
