--- a/assets/stylesheets/scss/_pard.scss
+++ b/assets/stylesheets/scss/_pard.scss
@@ -989,7 +989,7 @@ select, textarea{
     font-size: $almostNormalSize;
 }
 
-.popup-form .route-addressForm, .popup-form .street_number-addressForm,.popup-form .door-addressForm, .popup-form .locality-addressForm, .popup-form .country-addressForm, .popup-form .postal_code-addressForm {
+.popup-form .route-addressForm, .popup-form .street_number-addressForm,.popup-form .door-addressForm, .popup-form .locality-addressForm, .popup-form .country-addressForm, .popup-form .postal_code-addressForm, .multiMedia {
   font-size: $smallSize;
   margin-bottom: 0.5rem;
   display: inline-block; 
