--- a/views/layout.erb
+++ b/views/layout.erb
@@ -21,9 +21,9 @@
     <!-- </section> -->
 	
 	<script>
-      // $(document).ready(function() {
+      $(document).ready(function() {
         $(document).foundation();
-      	// }); 
+      	}); 
   </script>
 
 
