--- a/assets/stylesheets/scss/util/_mixins.scss
+++ b/assets/stylesheets/scss/util/_mixins.scss
@@ -256,4 +256,10 @@
 
 
 
-
+@mixin vertical-align($position: relative) {
+  position: $position;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
