--- a/assets/stylesheets/scss/_settings.scss
+++ b/assets/stylesheets/scss/_settings.scss
@@ -52,6 +52,9 @@ $pard-section-width: 48rem;
 $pard-grid-width: 61.5rem;
 $pard-grid-spacing: 1.8rem;
 
+$padding-content: 0.75rem;
+
+
 //colors
 $content-background: #fff;
 $grey-1:#f6f6f6;
@@ -64,6 +67,7 @@ $title-color: #757373;
 $text-color: #A0A09F;
 $layout-border-radius: 0.125rem;
 $element-border-radius: 0.125rem;
+
 
 
 //fonts
