--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,8 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
-       <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCimmihWSDJV09dkGVYeD60faKAebhYJXg&libraries=places"
-        async defer></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCimmihWSDJV09dkGVYeD60faKAebhYJXg&libraries=places"
+    async defer></script>
 	</head>
 
 	<body>
