--- a/assets/stylesheets/scss/_settings.scss
+++ b/assets/stylesheets/scss/_settings.scss
@@ -52,7 +52,7 @@ $pard-section-width: 48rem;
 $pard-grid-width: 61.5rem;
 $pard-grid-spacing: 1.8rem;
 
-$padding-content: 0.75rem;
+$inner-spacing: 0.75rem;
 
 
 //colors
