city linked with google map

--- a/assets/stylesheets/scss/_pard.scss
+++ b/assets/stylesheets/scss/_pard.scss
@@ -1124,7 +1124,7 @@ FORMS
 //     color: transparent;
 //     text-shadow: 0 0 0 #000;
 // }
-select, textarea{
+select, textarea, a{
     @include border-radius($element-border-radius);
     outline: none;
 }
