--- a/assets/stylesheets/scss/_pard.scss
+++ b/assets/stylesheets/scss/_pard.scss
@@ -78,7 +78,7 @@ main {
   padding-top:1.8rem;
   padding-bottom:1.8rem;
   background-color: $grey-1;
-  min-height: 100vw;
+  min-height: 100vh;
 }
 
 .whole-container {
