--- a/views/layout.erb
+++ b/views/layout.erb
@@ -22,9 +22,9 @@
     <!-- </section> -->
 	
 	<script>
-      // $(document).ready(function() {
+      $(document).ready(function() {
         $(document).foundation();
-      	// }); 
+      }); 
   </script>
 
 
