--- a/views/layout.erb
+++ b/views/layout.erb
@@ -22,8 +22,8 @@
     <!-- </section> -->
 	
 	<script>
-      $(document).ready(function() {
-        $(document).foundation();
+      $(window).load(function() {
+         $(document).foundation();
       }); 
   </script>
 
