foundation activation moved in each function of app.js + profile color background issue resolved

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -21,12 +21,12 @@
 	  <%= yield %>
     <!-- </section> -->
 	
-	<script>
+<!-- 	<script>
       $(window).load(function() {
          $(document).foundation();
       }); 
   </script>
-
+ -->
 
 
 	</body>
