--- a/assets/stylesheets/scss/_pages.scss
+++ b/assets/stylesheets/scss/_pages.scss
@@ -313,26 +313,6 @@ Aside
   width:2.7rem;
 }
 
-// .name-column, .icon-column{
-//   display: inline-block;
-//   vertical-align: top; 
-// }
-
-// .name-column{
-//   padding: 0.7rem 0.2rem 0rem 0.2rem;
-//   width: 8.5rem;
-// }
-
-// .profile-name-column{ //cancelar de diseño inicial
-//   padding-bottom: 0.4rem;
-// }
-
-// .icon-column{
-//   padding: 0.4rem 0.2rem 0.4rem 0.2rem;
-//   width:2.4rem;
-// }
-
-
 .other-profiles-nav-container{
   display: block;  
   margin-top: $pard-grid-spacing;
@@ -374,11 +354,6 @@ Aside
   position:relative;
 }
 
-// .profile-nav-circle-selected,.profile-nav-circle{
-//   @include pardCircle(2rem);
-//   position:relative;
-// }
-
 
 .profile-nav-element-icon{
   @include absolute-center;
@@ -396,19 +371,10 @@ Aside
   margin-top: 0.2rem;
 }
 
-// .nav-list-container{
-//   padding-bottom:0.4rem;
-// }
-
 .nav-icon-production-container{
   height: 2.2rem;
   width: 2.2rem;
 }
-
-// .nav-icon-production-container{
-//   height: 2rem;
-//   width: 2rem;
-// }
 
 .profile-nav-element-container, .production-nav-element-container{
   padding: 0.2rem 0.1rem;
@@ -438,6 +404,13 @@ Profile Section
 .section-profilePhoto-container{
   width:100%;
   max-height: 13.75rem;
+}
+
+.section-profilePhoto-container-noPhoto{
+  @include breakpoint(large){ height: 13.75rem; }
+  @include breakpoint(medium down){ height: 22vw;}
+  @include breakpoint(small down){ height: 30vw;}
+
 }
 
 .title-profile-section-container{
