--- a/assets/stylesheets/scss/_pages.scss
+++ b/assets/stylesheets/scss/_pages.scss
@@ -407,6 +407,7 @@ Profile Section
 }
 
 .section-profilePhoto-container-noPhoto{
+  width:100%;
   @include breakpoint(large){ height: 13.75rem; }
   @include breakpoint(medium down){ height: 22vw;}
   @include breakpoint(small down){ height: 30vw;}
@@ -415,7 +416,8 @@ Profile Section
 
 .title-profile-section-container{
   width:100%;
-  height: 3.5rem;
+  @include breakpoint(medium){min-height: 3.5rem};
+  @include breakpoint(small down){ min-height: 2.5rem;}
   background-color:$grey-1;
   padding-left:$inner-spacing;
   padding-right:$inner-spacing;
@@ -425,7 +427,8 @@ Profile Section
 }
 
 .text-title-profile-section{
-  font-size: 1.875rem;
+  @include breakpoint(medium){font-size: 1.875rem;}
+  @include breakpoint(small down){ font-size: 1.3rem;}
   font-weight: bold;
 }
 
@@ -516,7 +519,7 @@ Production Section
   width: 100%;
   background-color: $grey-1;
   min-height: 1.5rem;
-  margin-top: -0.8rem;
+  @include breakpoint (medim) {margin-top: -0.5rem};
   padding: 0 $inner-spacing;
   position: relative;
 }
