--- a/assets/stylesheets/scss/_pard.scss
+++ b/assets/stylesheets/scss/_pard.scss
@@ -77,7 +77,7 @@ html{
 main {
   padding-top:1.8rem;
   padding-bottom:1.8rem;
-  background-color: $grey-1;
+  background-color: $content-background;
   min-height: 100vh;
 }
 
@@ -196,7 +196,7 @@ Grid and Bar
 
 .grid-element-content{
   width: 100%;
-  background: $content-background;
+  background: $grey-1;
   @include breakpoint(medium){
     padding-left:2rem;
     padding-right:2rem;
@@ -382,13 +382,13 @@ button{
   cursor: pointer;
   width: 100%;  
   padding: 0.5rem $inner-spacing; 
-  border: 2px solid transparent;
+  border: 1px solid transparent;
 
 }
 
 .create-profile-btn:hover{
-  background-color: $grey-1;
-  border: 2px solid $grey-2;
+   // background-color: $grey-1;
+  border: 1px solid $grey-1;
 }
 
 .create-artist-btn-popup, .create-space-btn-popup{
