--- a/assets/stylesheets/scss/_pard.scss
+++ b/assets/stylesheets/scss/_pard.scss
@@ -77,7 +77,7 @@ html{
 main {
   padding-top:1.8rem;
   padding-bottom:1.8rem;
-  background-color: $content-background;
+  background: $content-background;
   min-height: 100vh;
 }
 
