dimensions of some icon adjusted

--- a/assets/stylesheets/scss/_pages.scss
+++ b/assets/stylesheets/scss/_pages.scss
@@ -357,6 +357,7 @@ Aside
 
 .profile-nav-element-icon{
   @include absolute-center;
+  font-size: 1.7rem;
 }
 
 .profile-nav-name-selected, .profile-nav-name-element, .profile-nav-production-name{
