--- a/assets/stylesheets/scss/app.scss
+++ b/assets/stylesheets/scss/app.scss
@@ -6,7 +6,14 @@
 @import 'foundation';
 @import 'motion-ui';
 @import 'jquery.datepick';
-// @import 'humanity.datepick';
+// @import 'fontello/css/fontello';
+@import 'fontello/css/fontello-embedded';
+
+@import 'fontello/css/fontello-codes';
+// @import 'animation';
+
+// @import 'fontello-ie7';
+// @import 'fontello-ie7-codes';
 
 
 
