--- a/assets/stylesheets/scss/_pages.scss
+++ b/assets/stylesheets/scss/_pages.scss
@@ -44,8 +44,7 @@ Header
 
 .login-bar, .user-bar{
   border-bottom: 2px solid $grey-1;
-  // box-shadow: 0px 1px 2px 1px $grey-1;
-  box-shadow: 0 0 10px rgba($black, 0.5);
+   // box-shadow: 0 1px 2px rgba($grey-2, 0.5);
 }
 
 .input-login {
@@ -150,14 +149,7 @@ grid-section content LogIn page
 --------------------------------*/
 
 .lateral-content-padding{
-  @include breakpoint(small down){
-    padding-left:1.5rem;
-    padding-right:1.5rem;
-  }
-  @include breakpoint(medium){
-    padding-left:2.2rem;
-    padding-right:2.2rem;
-  }
+  padding: 0 $inner-spacing; 
 }
 
 .grid-section-contentTitle{
@@ -211,6 +203,14 @@ grid-section content LogIn page
 
 
 .search-results{
+   @include breakpoint(small down){
+    padding-left:1.5rem;
+    padding-right:1.5rem;
+  }
+  @include breakpoint(medium){
+    padding-left:3.5rem;
+    padding-right:3.5rem;
+  }
   margin-top: 2.5rem;
 }
 
